src/pages/DetailedQuestions.css
.home-button {
    background-color: lightcoral;
    padding: 1%;
    text-align: left;
}

.top button{
    /*You need to specify the class name the App.css file*/
    /*below does pointer hand icon*/
    cursor: pointer;
    /* This floats the buttons side by side*/
    float:left;
}
.top button:not(:last-child){
    /* This prevents double borders from the right button*/
    border-right:none;
}
/* This focuses on the top of the screen and making the buttons work together */
.compass{
    height: 1%;
    display: flex;
    padding: 2% 1%;
}
/* Below focuses on the text for the list of questions (listOQues) */
.listOQues Form{
    padding: 10px 20px;
}
.title{
    padding: 1%;
}
/* This is working with the size of the textbox --- Later I want to implement the horizontal scrolling */
.textbox{
    width: 100%; /* not changeable width */
    height: 100%; /*  */
    padding: 20px; /* Inner spacing */
    font-size: 11px; /* Text size */
    text-align:left;
    overflow-x: none;
    overflow-y: scroll;
    border: 1px solid black;
    border-radius: 4px;
    margin-left: 50px;
}
.listOQues text{
    font-size: x-large;
}
.top{
    
    flex: 50%;
    position:absolute;
    top: 3%;
    left: 50%;
    transform: translate(-50%, -50%);

}
.submitButton{
    padding: 20px 25px;
}
.top:after{
    content: "";
    clear:both;
    display: table;
}

.progress-section {
    position: fixed;
    text-align: center;
    font-size: 20px;
    right: 1%;
    padding-top: 0.5%;
    padding: 1%;
    background-color: lightblue;
    border-color: lightblue;
    border-style: solid;
    border-radius: 15px;
}

.lowerContainer{
    display:flex;
    align-items: center;
    width: 90%;
    height: 14%;


}

.lowerContainer row{
    border: 1px solid black;
}

.IMG{
    width: 50%;
    height: 100%;
    transform: translate( 100%, -1%);
}

